lecture 2 cz: comas for clarification, reported by Jiří Král
Closes #94

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/apo-lecture02-numbers-cz.tex
+++ b/02-numbers/apo-lecture02-numbers-cz.tex
@@ -223,7 +223,7 @@ Použijeme předchozí princip na co nejrychlejší součet 32 nebo 64 různých
 \begin{itemize}
 \item Součiny jsou jednoduché: $x_i \cdot y_j=x_i$~\texttt{and}~$y_j$
 \item Nejtěžší je sečíst prostřední sloupec 64 jednobitových čísel
-\item Pustíme na všechny bity co můžeme paralelně sčítačky a carry budeme přičítat v dalších krocích
+\item Pustíme na všechny bity, co můžeme, paralelně sčítačky a carry budeme přičítat v dalších krocích
 \item V první fázi to bude 1323 sčítaček
 \end{itemize}
 \end{column}
