lecture 2 cz: correct plural match, reported by Roman Horniichuk
Closes #91

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/02-numbers/apo-lecture02-numbers-cz.tex
+++ b/02-numbers/apo-lecture02-numbers-cz.tex
@@ -774,7 +774,7 @@ Standard IEEE-754 definuje, jakým způsobem zakódovat reálné číslo do 32, 
 Reálné 32-bitové číslo obsahuje:
 \begin{itemize}
 \item 1 bit znaménko (pozn. existuje 0 i -0)
-\item 8 bit hodnota exponentu s posunutou nulou o 127
+\item 8 bitů hodnota exponentu s posunutou nulou o 127
 \item 23 bitů hodnota mantisy, tedy cifer reprezentujících hodnotu
 \end{itemize}
 \bigskip
