lecture 4 cz: typo corrected, reported by Roman Horniichuk
Closes #92

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/04-memory/apo-lecture04-memory-cz.tex
+++ b/04-memory/apo-lecture04-memory-cz.tex
@@ -122,7 +122,7 @@ Paměť :
 \item typ přístupu:
 \begin{itemize}
 \item k vnitřní paměti počítače lze přistupvat v náhodném pořadí (= random access -- RAM)
-\item některé externí paměti (např. magnetopásková paměť využívaná pro zálohování -- levnější než HDD a SSD) umožňjí pouze sekvenční přístup, tedy čtení a zápis bajtů po sobě
+\item některé externí paměti (např. magnetopásková paměť využívaná pro zálohování -- levnější než HDD a SSD) umožňují pouze sekvenční přístup, tedy čtení a zápis bajtů po sobě
 \item pro HDD, SSD, Flash je možný přítup po celých blocích, u SSD/Flash je zápis bloku možný vždy jednou do smazání po velkých celcích
 \end{itemize}
 \end{itemize}
