lecture 05 cz: typo corrected, reported by Pavel Gottesman
Closes #88

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/05-pipeline/apo-lecture05-pipeline-cz.tex
+++ b/05-pipeline/apo-lecture05-pipeline-cz.tex
@@ -275,7 +275,7 @@ QtRvSim \url{https://github.com/cvut/qtrvsim}
  \item pokud je výsledek k dispozici (vypočítaný) před vykonáním následující instrukce/í,
        která/é vyžadují výsledek, tak je možné datový hazard vyřešit přeposláním hodnoty
  \item K datovému hazardu v uvažovaném návrhu dochází, pokud některý zdrojový registr
-       (\textbf{rs1}, \textbf{rs2}) v stupni \textbf{EX} odovídá cílovému registru
+       (\textbf{rs1}, \textbf{rs2}) v stupni \textbf{EX} odpovídá cílovému registru
        ve stupni \textbf{MEM} nebo \textbf{WB} (vyjma X0/zero)
  \item Čísla registrů z daných stupňů jsou přivedena na jednotku řešení hazardů (Hazard Unit -- HU)
 \end{itemize}
