lecture 05 cz: typo corrected, reported by Pavel Gottesman
Closes #87

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/apo-lecture03-cpu-cz.tex
+++ b/03-cpu/apo-lecture03-cpu-cz.tex
@@ -526,7 +526,7 @@ Při náběžné hraně hodin (signál CLK) se do registru PC uloží nová hodn
 \phantom{X} & \phantom{X} \\
 \hfill \includegraphics[width=1.2cm]{alu.pdf} & na základě ALUControl provede vybranou operaci na vstupu SrcA a SrcB. Výsledek je ALUout a výsledkem jsou i příznaky jak vyšel výsledek, například zero \\ 
 \phantom{X} & \phantom{X} \\
-\hfill \includegraphics[width=1.6cm]{imm_decode.pdf} & provede sestavení bitů konstanty z bitů instrukce a provede znaménkové rozšíření na 32 bitů plnohonotného čísla se znaménkem \\ 
+\hfill \includegraphics[width=1.6cm]{imm_decode.pdf} & provede sestavení bitů konstanty z bitů instrukce a provede znaménkové rozšíření na 32 bitů plnohodnotného čísla se znaménkem \\ 
 \end{tabular}
 \end{table}
 
