lecture 03 cz: typo corrected, reported by Barbora Šubová
Closes #86

Signed-off-by: Pavel Pisa <pisa@fel.cvut.cz>

--- a/03-cpu/apo-lecture03-cpu-cz.tex
+++ b/03-cpu/apo-lecture03-cpu-cz.tex
@@ -124,7 +124,7 @@ Vstupně výstupní podsystém:
   \begin{itemize}
     \item spočti adresu, vyber registry, načti operandy, proveď požadovaný výpočet ALU a ulož výsledky
   \end{itemize}
-  \item Zkontroluj zda není přerušení nebo vyjímka (podrobně v přednášce 9)
+  \item Zkontroluj zda není přerušení nebo výjimka (podrobně v přednášce 9)
   \item Opakuj od kroku 2
 \end{enumerate}
 \end{frame}
